[tool.poetry]
name = "speedtest"
version = "0.1.0"
description = "At-home internet speed -> CSV program"
authors = ["Kevin Kredit"]

[tool.poetry.dependencies]
python = "~3.7"
speedtest-cli = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
